--- a/css/home.css
+++ b/css/home.css
@@ -1,28 +1,59 @@
-body{
-    background-color: rgb(218, 218, 218) ;
+body {
+    background-color: rgb(218, 218, 218);
+    text-decoration: none;
+    color: #fff;
+    overflow: hidden;
+}
+
+a {
     text-decoration: none;
     color: #fff;
 }
 
-a{
-text-decoration: none;
-color: #fff;
-  }
-
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-.navBar{
+.navBar {
     background-color: #b4b8ab;
 }
 
-.backgroundColor{
-    background-color: #b4b8ab ;
+.backgroundColor {
+    background-color: #b4b8ab;
 }
 
 #img {
     height: 40px;
     transition: transform 0.2s;
-  }
+}
+
+
+
+/* Position text in the middle of the page/image */
+.bg-text {
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+}
+
+.bg-image {
+    width: 100%;
+    height: 100%; /* Set the height to 100% of the viewport height */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
