--- a/css/home.css
+++ b/css/home.css
@@ -49,11 +49,7 @@ a {
     text-align: center;
 }
 
-.bg-image {
-    width: 100%;
-    height: 100%; /* Set the height to 100% of the viewport height */
-    background-position: center;
-    background-repeat: no-repeat;
+body {
+    background: url("../media/Kendrick-Lamar-at-Glastonbury-2022.jpg") no-repeat center center fixed;
     background-size: cover;
-    position: relative;
-}
+  }
