--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,89 @@
-
-.navBar{
-    background-color: #b4b8ab;
+.navBar {
+    background-color: #5c1e01;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
-.text-box{
+
+.text-box {
     font-size: 100px;
     font-family: sans-serif;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-   text-decoration: none;
+    text-decoration: none;
     color: rgb(255, 255, 255);
-    
+
 }
 
-span{
+span {
     display: inline-block;
     font-weight: bolder;
     animation: mover 6s linear infinite;
     color: rgb(218, 218, 218);
 }
-@keyframes mover{
-    0%{
-    text-shadow: 0 0 40px rgba(0,0,0,0);
+
+@keyframes mover {
+    0% {
+        text-shadow: 0 0 40px rgba(0, 0, 0, 0);
     }
-    10%{
-        text-shadow: 0 0 40px rgba(0,0,0,0.30);
+
+    10% {
+        text-shadow: 0 0 40px rgba(0, 0, 0, 0.30);
         transform: translateY(30px);
-        }
-        50%{
-            text-shadow: 0 0 40px rgba(0,0,0,0);
-            }
+    }
+
+    50% {
+        text-shadow: 0 0 40px rgba(0, 0, 0, 0);
+    }
 }
-span:nth-child(1)
-{
-    animation-delay: 0.5s ;
+
+span:nth-child(1) {
+    animation-delay: 0.5s;
 }
-span:nth-child(2)
-{
-    animation-delay: 1s ;
-}span:nth-child(3)
-{
-    animation-delay: 1.5s ;
-}span:nth-child(4)
-{
-    animation-delay: 2s ;
-}span:nth-child(5)
-{
-    animation-delay: 2.5s ;
+
+span:nth-child(2) {
+    animation-delay: 1s;
 }
-body{
-    background-color: rgb(218, 218, 218) ;
+
+span:nth-child(3) {
+    animation-delay: 1.5s;
+}
+
+span:nth-child(4) {
+    animation-delay: 2s;
+}
+
+span:nth-child(5) {
+    animation-delay: 2.5s;
+}
+
+body {
+    background-color: rgb(218, 218, 218);
     text-decoration: none;
     color: #fff;
 }
-a{
-text-decoration: none;
-color: #fff;
-  }
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.bg-text {
+
+    /* Black w/opacity/see-through */
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    border: 3px solid #3b1212;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+}
