changed the background for about me and added new page for contact

--- a/css/about.css
+++ b/css/about.css
@@ -18,7 +18,7 @@
 body {
     background-color: rgb(218, 218, 218);
     color: #fff;
-    background: url("../media/IGOR.jpg") no-repeat center center fixed;
+    background: url("../media/371552-large-dark-red-background-2560x1440-images.jpg") no-repeat center center fixed;
     background-size: cover;
     margin-top: 70px;
     /* Add top margin to push content below the navbar */
@@ -70,7 +70,6 @@ a {
     height: 200px;
     display: flex;
     justify-content: center;
-
 }
 
 .btnGaming {
