made the project look good

--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 .navBar {
-    background-color: #5c1e01;
+    background-color: #5c0401;
     z-index: 9999;
     /* Ensure the navbar appears on top of other elements */
 }
