--- a/css/style.css
+++ b/css/style.css
@@ -1,89 +1,60 @@
-.navBar {
-    background-color: #5c1e01;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-.text-box {
-    font-size: 100px;
-    font-family: sans-serif;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-
-}
-
-span {
-    display: inline-block;
-    font-weight: bolder;
-    animation: mover 6s linear infinite;
-    color: rgb(218, 218, 218);
-}
-
-@keyframes mover {
-    0% {
-        text-shadow: 0 0 40px rgba(0, 0, 0, 0);
-    }
-
-    10% {
-        text-shadow: 0 0 40px rgba(0, 0, 0, 0.30);
-        transform: translateY(30px);
-    }
-
-    50% {
-        text-shadow: 0 0 40px rgba(0, 0, 0, 0);
-    }
-}
-
-span:nth-child(1) {
-    animation-delay: 0.5s;
-}
-
-span:nth-child(2) {
-    animation-delay: 1s;
-}
-
-span:nth-child(3) {
-    animation-delay: 1.5s;
-}
-
-span:nth-child(4) {
-    animation-delay: 2s;
-}
-
-span:nth-child(5) {
-    animation-delay: 2.5s;
-}
-
 body {
-    background-color: rgb(218, 218, 218);
-    text-decoration: none;
-    color: #fff;
+    background-color: #581919;
+    color: white;
+    font-size: larger;
 }
 
-a {
-    text-decoration: none;
-    color: #fff;
+.navBar {
+    padding: 10px;
 }
 
-.bg-text {
-
-    /* Black w/opacity/see-through */
-    color: rgb(0, 0, 0);
-    font-weight: bold;
-    border: 3px solid #3b1212;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 80%;
-    padding: 20px;
-    text-align: center;
+.nav-bar-item:hover {
+    filter: drop-shadow(0 0 0.75rem rgb(245, 244, 240));
 }
+
+.svgImg {
+    width: 30px;
+    height: 30px;
+    margin-bottom: 50px;
+}
+
+.gojoImg {
+    margin-top: 10px;
+    width: 120%;
+    height: 105%;
+    margin-left: 35%;
+    filter: drop-shadow(0 0 0.75rem rgb(245, 244, 240));
+}
+
+@media only screen and (max-width: 600px) {
+    .gojoImg {
+        margin-top: 10px;
+        width: 100%;
+        height: 100%;
+        margin-left: 0%;
+        filter: drop-shadow(0 0 0.75rem rgb(245, 244, 240));
+    }
+}
+
+.about-section {
+    margin-bottom: 100px;
+    z-index: 4;
+    display: none;
+}
+
+.hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 2s, opacity 2s linear;
+}
+
+.visible {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 2s linear;
+}
+
+.home-section{
+    z-index: 5;
+}
+
