--- a/css/contact.css
+++ b/css/contact.css
@@ -51,3 +51,32 @@ body {
     border: none;
     border-radius: 15px;
 }
+
+@media (max-width: 900px) {
+    .inputTopic {
+        width: 50%;
+        height: 160%;
+        border-radius: 15px;
+    }
+    
+    .inputQuestion {
+        width: 100%;
+        height: 800%;
+        border-radius: 15px;
+    }
+    
+    .inputEmail {
+        width: 100%;
+        height: 160%;
+        border-radius: 15px;
+    }
+    
+    .submitBtn {
+        width: 60%;
+        height: 140%;
+        background-color: #a73d3d;
+        border: none;
+        border-radius: 15px;
+    }
+  }
+
