--- a/style/style.css
+++ b/style/style.css
@@ -6,12 +6,24 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden; /* Ensure no scrollbars */
+    margin: 0; /* Remove default margin */
+}
+
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Place canvas behind the terminal */
 }
 
 .terminal-wrapper {
-    width: 600px;
-    height: 400px;
+    width: 900px;
+    height: 600px;
     margin-top: -20vh; /* Adjusted margin-top to -20% of viewport height */
+    z-index: 1; /* Ensure the terminal is above the canvas */
 }
 
 .terminal {
